<resources>
    <string name="app_name">Inwento</string>


    <string name="activity_intent_filter_action_bar_code" translatable="false">com.inwento.ACTION</string>
    <string name="activity_intent_filter_action_rfid" translatable="false">com.inwento.ACTION</string>
    <string name="datawedge_intent_key_source" translatable="false">com.symbol.datawedge.source</string>
    <string name="datawedge_intent_key_label_type" translatable="false">com.symbol.datawedge.label_type</string>
    <string name="datawedge_intent_key_data" translatable="false">com.symbol.datawedge.data_string</string>
    <string name="datawedge_intent_key_source_legacy" translatable="false">com.motorolasolutions.emdk.datawedge.source</string>
    <string name="datawedge_intent_key_label_type_legacy" translatable="false">com.motorolasolutions.emdk.datawedge.label_type</string>
    <string name="datawedge_intent_key_data_legacy" translatable="false">com.motorolasolutions.emdk.datawedge.data_string</string>


    <string name="scanned">ZESKANOWANE</string>
    <string name="to_scan">DO ZESKANOWANIA</string>
    <string name="new_unknown">NOWE</string>
    <string name="move">PRZESUNIĘCIE</string>
    <string name="scan_edition">Scan Edition</string>
    <string name="user">Użytkownik:</string>
    <string name="fake_name">Alex Klim</string>
    <string name="email">Email:</string>
    <string name="fake_email">alex.klim@gmail.com</string>
    <string name="server_address">Adres serwera:</string>
    <string name="fake_address">http://10.10.10.10:9090/api</string>
    <string name="filter_barcodes">Filtruj kody kreskowe</string>
    <string name="prefix">Prefiks</string>
    <string name="fake_suffix">…1234...</string>
    <string name="fake_postfix">…1234</string>
    <string name="code_length">Długość kodu</string>
    <string name="zero">0</string>
    <string name="min_code_length">Minimalna długość kodu</string>
    <string name="max_code_length">Maksymalna długość kodu</string>
    <string name="save_new_settings">Zachowaj nowe ustawienia</string>
    <string name="fake_prefix">1234…</string>
    <string name="logo">logo</string>
    <string name="use_rfid_scanner">Używaj skanera RFID</string>
    <string name="product_view">Podgląd produktów</string>
    <string name="start_writing_title">Wyszukaj produkt</string>
    <string name="something_wrong">Coś poszło nie tak:</string>
    <string name="wszystkie">Wszystkie</string>
    <string name="location_was_not_chosen">Lokalizacjia nie została wybrana</string>
    <string name="products">"Produkty "</string>
    <string name="inventory_finished">Inventaryzacja została zakończona</string>
    <string name="login_failed">Login failed:</string>
    <string name="code_doesnt_match_the_established_pattern">Code doesn\'t match the established pattern</string>
    <string name="new_settings_saved">Nowe ustawienia zachowane</string>
    <string name="inventory">Inwentaryzacja</string>
    <string name="inventory_start_date">Początek inwentaryzacji:</string>
    <string name="scanned_products">Zeskanowane produkty:</string>
    <string name="total_product_amount">Wszystkie produkty:</string>
    <string name="login_desc">Zaloguj się żeby kontynuować</string>
    <string name="login">login</string>
    <string name="password">password</string>
    <string name="remember_me">Remember me</string>
    <string name="move_product">Przesunięcie</string>
    <string name="scrap_product">Złomowanie</string>
    <string name="settings">Ustawienia</string>
    <string name="suffix">Suffix</string>
    <string name="postfix">Postfix</string>
    <string name="branch">Oddział:</string>
    <string name="location">Lokalizacjia:</string>
    <string name="liable_user">Osoba odpowiedzialna:</string>
    <string name="receiver">Użytkownik:</string>
    <string name="name_and_surname">Imię i nazwisko</string>
    <string name="title">Title</string>
    <string name="producer">Producent:</string>
    <string name="serial_number">Numer seryjny:</string>
    <string name="close">Zamknij</string>
    <string name="ok">ok</string>
    <string name="scrap_date">Data umożenia:</string>
    <string name="year">Rok:</string>
    <string name="month">Miesiąc:</string>
    <string name="day">Dzień:</string>
    <string name="scrap_reason">Powód umożenia</string>
    <string name="scrap">Umożenie</string>
    <string name="bar_code">bar code:</string>
    <string name="rfid_code">rfid code:</string>
    <string name="unknown_code">Nieznany kod:</string>
    <string name="save_like_new_product">Zachowaj jako nowy produckt</string>
    <string name="place">Umiejscowienie</string>
    <string name="fake">fake</string>


</resources>


