<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="5dp">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginBottom="20dp"
            android:text="@string/unknown_code"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/dup_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fake"
            android:gravity="center"
            android:textSize="20sp" />


    </LinearLayout>


    <Button
        android:id="@+id/dup_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@drawable/btn_rounded"
        android:text="@string/save_like_new_product"
        android:textColor="@color/white"
        android:textSize="20sp" />
</LinearLayout>